--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
+    "react-model": "^4.1.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
